[tool.poetry]
name = "ilness-qa"
version = "0.1.0"
description = ""
authors = ["nick <nickchen1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.25.0"
langchain = "^0.3.2"
langchain-openai = "^0.2.2"
pydantic-settings = "^2.5.2"
pymongo = "^4.10.1"
streamlit = "^1.39.0"
langchain-mongodb = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
